# chatserver

./: CMakeLists.txt  README.md  readme.md
FriendService/auxiliary_process/FriendServer/src/: FriendServer.cpp
FriendService/configure/: mysql.conf
FriendService/src/: FriendService.cpp
LogServer/: README.md
Porxy/src/: ProxyService.cpp
UserService/: README.md
UserService/auxiliary_process/UserService_Sub/src/: UserServer.cpp
UserService/src/: UserService.cpp  ZooKeeperMatser.cpp
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/mysqldb/: mysqldb.h
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp
src/server/model/: friendmoel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/mysqldb/: mysqldb.cpp
src/server/redis/: redis.cpp
test_muduo/: CMakeLists.txt  test_server.cpp
